# skill_chain

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: 00_local_demo.py  01_simple_chain.py  02_parallel_analysis.py  03_document_pipeline.py  04_conditional_routing.py  05_loop_refinement.py  06_claude_api_demo.py
examples/custom_skills_demo/: run.py
skillchain/: __init__.py  exceptions.py
skillchain/core/: __init__.py  arguments.py  chain.py  context.py  disclosure.py  engine.py  skill.py
skillchain/models/: __init__.py  provider.py
skillchain/patterns/: __init__.py  conditional.py  loop.py  map_reduce.py  parallel.py  sequential.py
skillchain/registry/: __init__.py  parser.py  registry.py
skillchain/registry/loaders/: local.py  package.py  url.py
skillchain/skills/: __init__.py
skillchain/skills/classify/: SKILL.md
skillchain/skills/extract-json/: SKILL.md
skillchain/skills/list-files/: SKILL.md
skillchain/skills/read-file/: SKILL.md
skillchain/telemetry/: __init__.py  attributes.py  tracing.py
tests/: test_arguments.py  test_chain.py  test_context.py  test_disclosure.py  test_engine.py  test_exceptions.py  test_integration.py  test_skill.py  test_telemetry.py
tests/test_models/: test_provider.py
tests/test_patterns/: test_conditional.py  test_loop.py  test_map_reduce.py  test_parallel.py
tests/test_registry/: test_local_loader.py  test_parser.py  test_registry.py
tests/test_skills/: test_list_files.py  test_llm_skills.py  test_read_file.py  test_write_file.py
(+14 files in other folders)
