[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillchain"
version = "0.2.1"
description = "Orchestrate AI skills in composable patterns"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "sdcnow", email = "siddhartha@sdcnow.com"}]
keywords = ["ai", "llm", "agents", "skills", "orchestration", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "litellm>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/sdcnow/skill_chain"
Repository = "https://github.com/sdcnow/skill_chain"
Issues = "https://github.com/sdcnow/skill_chain/issues"

[project.optional-dependencies]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
